--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "ws": "^8.13.0",
-    "axios": "^1.6.0" // Or latest version
+    "axios": "^1.6.0"
   },
   "engines": {
     "node": ">=18.0.0"
