--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "express": "^4.18.2",
     "ws": "^8.13.0",
     "axios": "^1.6.0",
-    "mqtt": "^5.3.0"  // Or latest version, e.g. ^4.3.7 if v5 has issues
+    "mqtt": "^5.3.0" 
   },
   "engines": {
     "node": ">=18.0.0"
