--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "render-quest-stream",
+  "name": "vr-robot-controller",
   "version": "1.0.0",
-  "description": "Stream mobile camera to Quest 2 and show controller input with MQTT.",
+  "description": "WebXR controller for an MQTT robot",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "ws": "^8.13.0",
-    "axios": "^1.6.0",
-    "mqtt": "^5.3.0" 
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "express": "^4.18.2"
   }
 }
