--- a/package.json
+++ b/package.json
@@ -1,14 +1,32 @@
 {
   "name": "vr-robot-controller",
   "version": "1.0.0",
-  "description": "WebXR controller for an MQTT robot",
+  "description": "VR Robot Controller using Meta Quest 2 and MQTT",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "express": "^4.18.2",
+    "mqtt": "^5.0.0",
+    "cors": "^2.8.5",
+    "helmet": "^7.0.0",
+    "compression": "^1.7.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "keywords": [
+    "vr",
+    "webxr",
+    "mqtt",
+    "robot",
+    "meta-quest"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
 }
