--- a/package.json
+++ b/package.json
@@ -1,32 +1,20 @@
 {
-  "name": "vr-robot-controller",
+  "name": "quest-rover-controller",
   "version": "1.0.0",
-  "description": "VR Robot Controller using Meta Quest 2 and MQTT",
+  "description": "Control a rover with a Meta Quest 2 via Node.js and MQTT.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "VD",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mqtt": "^5.0.0",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "compression": "^1.7.4"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "mqtt": "^5.3.4",
+    "ws": "^8.16.0"
   },
   "engines": {
-    "node": ">=16.0.0"
-  },
-  "keywords": [
-    "vr",
-    "webxr",
-    "mqtt",
-    "robot",
-    "meta-quest"
-  ],
-  "author": "Your Name",
-  "license": "MIT"
+    "node": ">=18.0.0"
+  }
 }
