--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "quest-rover-controller",
+  "name": "vr-rover-controller",
   "version": "1.0.0",
-  "description": "Control a rover with a Meta Quest 2 via Node.js and MQTT.",
+  "description": "VR Controller for 6-wheel rover via MQTT",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
-  "author": "VD",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mqtt": "^5.3.4",
-    "ws": "^8.16.0"
+    "mqtt": "^5.3.0",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "keywords": ["vr", "mqtt", "rover", "webxr", "esp8266"],
+  "author": "VR Rover Controller",
+  "license": "MIT"
 }
